fix abbr text invisible

--- a/htdocs/luci-static/argon/cascade.css
+++ b/htdocs/luci-static/argon/cascade.css
@@ -403,7 +403,7 @@ code {
 abbr {
   cursor: help;
   text-decoration: underline;
-  color: #fff;
+  color: #797474;
 }
 hr {
   margin: 1rem 0;
